name:                wait-for-port
version:             0.1.0.0
synopsis:            Wait for a port.
license:             BSD3
license-file:        LICENSE
author:              Daniel Díaz
maintainer:          daniel.casanueva@plowtech.net
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable wait-for-port
  main-is: Main.hs
  build-depends:
      base >= 4.8 && < 5
    , network-simple
  default-language: Haskell2010
